--- a/src/first.html
+++ b/src/first.html
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg fixed-top" id="navBar">
             <div class="container">      
                 <a class="navbar-brand scroll" href="index.html">
-                    <img src="./images/easyschools-logo-resized.png" alt="logo" />
+                  <img src="./images/1998-min.png" class="w-100" alt="logo" />
                 </a>
                     <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarsupportedcontent" aria-expanded="false">
                     <span class="navbar-toggler-icon">
