--- a/src/first.html
+++ b/src/first.html
@@ -80,7 +80,7 @@
                <h2>
                    الهوايات :
                    <span >
-                     السباحة   
+                     الرسم 
                    </span>
                </h2>
                </div>
