--- a/src/account.html
+++ b/src/account.html
@@ -7,7 +7,7 @@
     <title>سجل الان</title>
     <script type="text/html" src="{require('index.js')}"></script>
 </head>
-<body>
+<body data-spy="scroll" data-target="#navBar">
     <header>
         <nav class="navbar navbar-expand-lg fixed-top" id="navBar">
             <div class="container">      
