--- a/src/first.html
+++ b/src/first.html
@@ -7,7 +7,7 @@
     <title>الطالبة سارة</title>
     <script type="text/html" src="{require('index.js')}"></script>
 </head>
-<body>
+<body data-spy="scroll" data-target="#navBar" >
     <header>
         <nav class="navbar navbar-expand-lg fixed-top" id="navBar">
             <div class="container">      
@@ -22,17 +22,17 @@
                 <div class="collapse navbar navbar-collapse" id="navbarsupportedcontent">
                 <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link scroll" href="index.html">
+                          <a class="nav-link active scroll" href="index.html">
                                 الصفحة الرئيسية
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link scroll" href="#formation">
+                          <a class="nav-link  scroll" href="#formation">
                              معلومات الطالب
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link scroll" href="#marks">
+                          <a class="nav-link scroll" href="#marks">
                              علامات الطالب
                             </a>
                         </li>
@@ -52,7 +52,7 @@
           </nav>
     </header>
 
-    <section class="formation" id="formation">
+    <section class="formation " id="formation">
         <div class="title text-center">
             <h2>معلومات الطالب</h2>
            </div>
@@ -148,6 +148,7 @@
           </section>
     
     <section class="advices" id="advices">
+      <div class="overlay">
       <div class="col-12">
         <h3 class="mr-3">
             نصائح لتصبح متفوقا
@@ -159,6 +160,7 @@
             <li> اختر الاصدقاء الجيدين</li>
             <li>وازن ما بين حياتك الاجتماعية وحياتك الدراسية</li>
         </ul>
+    </div>
     </div>
     </section>
      
