--- a/src/second.html
+++ b/src/second.html
@@ -7,7 +7,7 @@
     <title>الطالب ادم</title>
     <script type="text/html" src="{require('index.js')}"></script>
 </head>
-<body>
+<body data-spy="scroll" data-target="#navBar">
     <header>
         <nav class="navbar navbar-expand-lg fixed-top" id="navBar">
             <div class="container">      
@@ -148,6 +148,7 @@
           </section>
 
           <section class="advice" id="advices">
+            <div class="overlay">
             <div class="col-12">
               <h3 class="mr-3">
                   نصائح لتصبح متفوقا
@@ -159,6 +160,7 @@
                   <li> اختر الاصدقاء الجيدين</li>
                   <li>وازن ما بين حياتك الاجتماعية وحياتك الدراسية</li>
               </ul>
+          </div>
           </div>
           </section>
 
